templates/tsa_template.yaml
---
# Source: tsa/templates/tsa-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: tsa-1.0.2
    app.kubernetes.io/name: tsa
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.2.1"
    app.kubernetes.io/managed-by: Helm
  name: release-name-tsa-server
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5555
    - name: metrics
      port: 2112
      protocol: TCP
      targetPort: 2112
  selector:
    app.kubernetes.io/name: tsa
    app.kubernetes.io/instance: release-name
  type: "ClusterIP"
---
# Source: tsa/templates/tsa-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-tsa-server
  namespace: default
  labels:
    helm.sh/chart: tsa-1.0.2
    app.kubernetes.io/name: tsa
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.2.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tsa
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        checksum/config: 43070e2e0036f8d1ba76cff498fe8adf6eb9278693abc5779805c59fbced24b7
      labels:
        app.kubernetes.io/name: tsa
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-tsa-server
      # This doesn't actually use Kubernetes credentials, so don't mount them in.
      automountServiceAccountToken: true
      containers:
        - name: release-name-tsa-server
          image: "ghcr.io/sigstore/timestamp-server@sha256:f4dcc96092a1b1fb5ca36d776f92a7cc62cdb1a8866c5120340f919141a3cd58"
          imagePullPolicy: "IfNotPresent"
          ports:            
            - containerPort: 5555
              protocol: TCP
            - containerPort: 2112
              protocol: TCP
          args:
            - "serve"
            - "--host=0.0.0.0"
            - "--port=5555"
            - "--timestamp-signer=tink"
            - "--tink-key-resource=resource"
            - "--tink-keyset-path=/etc/tsa-config/tink.keyset.enc"
            - "--certificate-chain-path=/etc/tsa-config/chain.pem"
            - "--tink-hcvault-token=token"
          volumeMounts:
            - name: tsa-config
              mountPath: /etc/tsa-config
      securityContext:
        runAsNonRoot: true
        runAsUser: 65533
      volumes:
        - name: tsa-config
          configMap:
            name: release-name-tsa-server-config
---
# Source: tsa/templates/tsa-http-ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  labels:
    helm.sh/chart: tsa-1.0.2
    app.kubernetes.io/name: tsa
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.2.1"
    app.kubernetes.io/managed-by: Helm
  name: release-name-tsa-server-http
  namespace: default
  annotations:
    {}
spec:
  ingressClassName: nginx
  rules:
    - host: "timestamp.localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-tsa-server
                port:
                  number: 80
